# bare-library

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  libtool
include/: HelloWorld.h
interface/matlab/: HelloWorld_create.cpp  HelloWorld_create.mexglx  HelloWorld_delete.cpp  HelloWorld_getNumber.cpp  HelloWorld_new.cpp  HelloWorld_sayHello.cpp  HelloWorld_setNumber.cpp  MatlabInterface.h  clean.m  make.m
interface/matlab/tools/: tools.hpp
src/: HelloWorld.cpp
unit-test/: HelloWorld.h~  HelloWorldTestSuite.h
