AC_CONFIG_MACRO_DIR([m4])
AC_PREREQ([2.69])
AC_INIT([Bare-Library], [0.1], [m.a@sharpasand.com])
LT_INIT([shared])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_SRCDIR([src/HelloWorld.cpp])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT
